-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b115
-
Verified
# Internal Error (/opt/jprt/T/P1/175841.hseigel/s/hotspot/src/os/linux/vm/os_linux.cpp:3950), pid=27906, tid=13248
# assert(thread->is_VM_thread() || thread->is_Java_thread()) failed: Must be VMThread or JavaThread
#
# assert(thread->is_VM_thread() || thread->is_Java_thread()) failed: Must be VMThread or JavaThread
#
- relates to
-
JDK-8159461 bigapps/Kitchensink/stressExitCode hits assert: Must be VMThread or JavaThread
-
- Resolved
-