8137165: Tests fail in SR_Handler because thread is not VMThread or JavaThread

Reviewed-by: kbarrett